[FIX] web: calendar sidebar name cropped
Before this commit: calendar view sidebar filter names were getting cropped
at bottom, it is because of line-height property which is set to 1.

After this commit: calendar view sidebar filter names will not be cropped
as line-height property set to 1.5.

task-2519813

closes odoo/odoo#72898

X-original-commit: 4e24df71f34f0306447f724fd5028778fdf46428

--- a/addons/web/static/src/legacy/scss/web_calendar.scss
+++ b/addons/web/static/src/legacy/scss/web_calendar.scss
@@ -706,7 +706,7 @@ $o-cw-filter-avatar-size: 20px;
             }
 
             .o_cw_filter_title {
-                line-height: 1;
+                line-height: $o-line-height-base;
                 flex-grow: 1;
             }
 
